--- a/aula3/Arquivo Inicial - Aula 3.ipynb
+++ b/aula3/Arquivo Inicial - Aula 3.ipynb
@@ -25,26 +25,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "SessionNotCreatedException",
-     "evalue": "Message: session not created: This version of ChromeDriver only supports Chrome version 97\nCurrent browser version is 99.0.4844.51 with binary path C:\\Program Files\\Google\\Chrome\\Application\\chrome.exe\nStacktrace:\nBacktrace:\n\tOrdinal0 [0x0083FDC3+2555331]\n\tOrdinal0 [0x007D77F1+2127857]\n\tOrdinal0 [0x006D2E08+1060360]\n\tOrdinal0 [0x006F19CA+1186250]\n\tOrdinal0 [0x006ED825+1169445]\n\tOrdinal0 [0x006EAFC1+1159105]\n\tOrdinal0 [0x0071C22F+1360431]\n\tOrdinal0 [0x0071BE9A+1359514]\n\tOrdinal0 [0x00717976+1341814]\n\tOrdinal0 [0x006F36B6+1193654]\n\tOrdinal0 [0x006F4546+1197382]\n\tGetHandleVerifier [0x009D9622+1619522]\n\tGetHandleVerifier [0x00A8882C+2336844]\n\tGetHandleVerifier [0x008D23E1+541697]\n\tGetHandleVerifier [0x008D1443+537699]\n\tOrdinal0 [0x007DD18E+2150798]\n\tOrdinal0 [0x007E1518+2168088]\n\tOrdinal0 [0x007E1660+2168416]\n\tOrdinal0 [0x007EB330+2208560]\n\tBaseThreadInitThunk [0x759BFA29+25]\n\tRtlGetAppContainerNamedObjectPath [0x77997A7E+286]\n\tRtlGetAppContainerNamedObjectPath [0x77997A4E+238]\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mSessionNotCreatedException\u001b[0m                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_17388/2744380952.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mselenium\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwebdriver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcommon\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mKeys\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# guia selenium: https://selenium-python.readthedocs.io\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mnavegador\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mwebdriver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mChrome\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[1;31m#(\"chromedriver.exe\") para usar o chromedriver do local do arquivo\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mD:\\Anaconda\\lib\\site-packages\\selenium\\webdriver\\chrome\\webdriver.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, executable_path, port, options, service_args, desired_capabilities, service_log_path, chrome_options, service, keep_alive)\u001b[0m\n\u001b[0;32m     68\u001b[0m             \u001b[0mservice\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mService\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mexecutable_path\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mport\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mservice_args\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mservice_log_path\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     69\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 70\u001b[1;33m         super(WebDriver, self).__init__(DesiredCapabilities.CHROME['browserName'], \"goog\",\n\u001b[0m\u001b[0;32m     71\u001b[0m                                         \u001b[0mport\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moptions\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     72\u001b[0m                                         \u001b[0mservice_args\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdesired_capabilities\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mD:\\Anaconda\\lib\\site-packages\\selenium\\webdriver\\chromium\\webdriver.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, browser_name, vendor_prefix, port, options, service_args, desired_capabilities, service_log_path, service, keep_alive)\u001b[0m\n\u001b[0;32m     91\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     92\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 93\u001b[1;33m             RemoteWebDriver.__init__(\n\u001b[0m\u001b[0;32m     94\u001b[0m                 \u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     95\u001b[0m                 command_executor=ChromiumRemoteConnection(\n",
-      "\u001b[1;32mD:\\Anaconda\\lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, command_executor, desired_capabilities, browser_profile, proxy, keep_alive, file_detector, options)\u001b[0m\n\u001b[0;32m    266\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfile_detector\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfile_detector\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mLocalFileDetector\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    267\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstart_client\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 268\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstart_session\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcapabilities\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbrowser_profile\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    269\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    270\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__repr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mD:\\Anaconda\\lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py\u001b[0m in \u001b[0;36mstart_session\u001b[1;34m(self, capabilities, browser_profile)\u001b[0m\n\u001b[0;32m    357\u001b[0m         parameters = {\"capabilities\": w3c_caps,\n\u001b[0;32m    358\u001b[0m                       \"desiredCapabilities\": capabilities}\n\u001b[1;32m--> 359\u001b[1;33m         \u001b[0mresponse\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mCommand\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mNEW_SESSION\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mparameters\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    360\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;34m'sessionId'\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mresponse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    361\u001b[0m             \u001b[0mresponse\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mresponse\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'value'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mD:\\Anaconda\\lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py\u001b[0m in \u001b[0;36mexecute\u001b[1;34m(self, driver_command, params)\u001b[0m\n\u001b[0;32m    422\u001b[0m         \u001b[0mresponse\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcommand_executor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdriver_command\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    423\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mresponse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 424\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0merror_handler\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcheck_response\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    425\u001b[0m             response['value'] = self._unwrap_value(\n\u001b[0;32m    426\u001b[0m                 response.get('value', None))\n",
-      "\u001b[1;32mD:\\Anaconda\\lib\\site-packages\\selenium\\webdriver\\remote\\errorhandler.py\u001b[0m in \u001b[0;36mcheck_response\u001b[1;34m(self, response)\u001b[0m\n\u001b[0;32m    245\u001b[0m                 \u001b[0malert_text\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'alert'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'text'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    246\u001b[0m             \u001b[1;32mraise\u001b[0m \u001b[0mexception_class\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscreen\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstacktrace\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0malert_text\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# type: ignore[call-arg]  # mypy is not smart enough here\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 247\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mexception_class\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscreen\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstacktrace\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    248\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    249\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_value_or_default\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mobj\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mMapping\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0m_KT\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_VT\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0m_KT\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdefault\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0m_VT\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[0m_VT\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mSessionNotCreatedException\u001b[0m: Message: session not created: This version of ChromeDriver only supports Chrome version 97\nCurrent browser version is 99.0.4844.51 with binary path C:\\Program Files\\Google\\Chrome\\Application\\chrome.exe\nStacktrace:\nBacktrace:\n\tOrdinal0 [0x0083FDC3+2555331]\n\tOrdinal0 [0x007D77F1+2127857]\n\tOrdinal0 [0x006D2E08+1060360]\n\tOrdinal0 [0x006F19CA+1186250]\n\tOrdinal0 [0x006ED825+1169445]\n\tOrdinal0 [0x006EAFC1+1159105]\n\tOrdinal0 [0x0071C22F+1360431]\n\tOrdinal0 [0x0071BE9A+1359514]\n\tOrdinal0 [0x00717976+1341814]\n\tOrdinal0 [0x006F36B6+1193654]\n\tOrdinal0 [0x006F4546+1197382]\n\tGetHandleVerifier [0x009D9622+1619522]\n\tGetHandleVerifier [0x00A8882C+2336844]\n\tGetHandleVerifier [0x008D23E1+541697]\n\tGetHandleVerifier [0x008D1443+537699]\n\tOrdinal0 [0x007DD18E+2150798]\n\tOrdinal0 [0x007E1518+2168088]\n\tOrdinal0 [0x007E1660+2168416]\n\tOrdinal0 [0x007EB330+2208560]\n\tBaseThreadInitThunk [0x759BFA29+25]\n\tRtlGetAppContainerNamedObjectPath [0x77997A7E+286]\n\tRtlGetAppContainerNamedObjectPath [0x77997A4E+238]\n"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\guste\\AppData\\Local\\Temp/ipykernel_10904/3201762069.py:5: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "  navegador = webdriver.Chrome('C://Users/guste/Documents/GitHub/intensivaoDePython/Aula3/chromedriver.exe')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.6\n",
+      "5.04\n",
+      "285.6\n"
      ]
     }
    ],
@@ -53,7 +53,7 @@
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.common.keys import Keys\n",
     "# guia selenium: https://selenium-python.readthedocs.io\n",
-    "navegador = webdriver.Chrome('C://Users/guste/OneDrive/Documents/GitHub/intensivaoDePython/aula3/chromedriver.exe')\n",
+    "navegador = webdriver.Chrome('C://Users/guste/Documents/GitHub/intensivaoDePython/Aula3/chromedriver.exe')\n",
     "#(\"chromedriver.exe\") para usar o chromedriver do local do arquivo\n",
     "\n",
     "#Passo 1: pegando a cotação do dolar\n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -301,70 +301,70 @@
        "      <td>Câmera Canon</td>\n",
        "      <td>999.99</td>\n",
        "      <td>Dólar</td>\n",
-       "      <td>5.55</td>\n",
-       "      <td>5549.9445</td>\n",
+       "      <td>4.60</td>\n",
+       "      <td>4599.954</td>\n",
        "      <td>1.40</td>\n",
-       "      <td>7769.92230</td>\n",
+       "      <td>6439.9356</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Carro Renault</td>\n",
        "      <td>4500.00</td>\n",
        "      <td>Euro</td>\n",
-       "      <td>6.34</td>\n",
-       "      <td>28530.0000</td>\n",
+       "      <td>5.04</td>\n",
+       "      <td>22680.000</td>\n",
        "      <td>2.00</td>\n",
-       "      <td>57060.00000</td>\n",
+       "      <td>45360.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Notebook Dell</td>\n",
        "      <td>899.99</td>\n",
        "      <td>Dólar</td>\n",
-       "      <td>5.55</td>\n",
-       "      <td>4994.9445</td>\n",
+       "      <td>4.60</td>\n",
+       "      <td>4139.954</td>\n",
        "      <td>1.70</td>\n",
-       "      <td>8491.40565</td>\n",
+       "      <td>7037.9218</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>IPhone</td>\n",
        "      <td>799.00</td>\n",
        "      <td>Dólar</td>\n",
-       "      <td>5.55</td>\n",
-       "      <td>4434.4500</td>\n",
+       "      <td>4.60</td>\n",
+       "      <td>3675.400</td>\n",
        "      <td>1.70</td>\n",
-       "      <td>7538.56500</td>\n",
+       "      <td>6248.1800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Carro Fiat</td>\n",
        "      <td>3000.00</td>\n",
        "      <td>Euro</td>\n",
-       "      <td>6.34</td>\n",
-       "      <td>19020.0000</td>\n",
+       "      <td>5.04</td>\n",
+       "      <td>15120.000</td>\n",
        "      <td>1.90</td>\n",
-       "      <td>36138.00000</td>\n",
+       "      <td>28728.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Celular Xiaomi</td>\n",
        "      <td>480.48</td>\n",
        "      <td>Dólar</td>\n",
-       "      <td>5.55</td>\n",
-       "      <td>2666.6640</td>\n",
+       "      <td>4.60</td>\n",
+       "      <td>2210.208</td>\n",
        "      <td>2.00</td>\n",
-       "      <td>5333.32800</td>\n",
+       "      <td>4420.4160</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Joia 20g</td>\n",
        "      <td>20.00</td>\n",
        "      <td>Ouro</td>\n",
-       "      <td>325.32</td>\n",
-       "      <td>6506.4000</td>\n",
+       "      <td>285.60</td>\n",
+       "      <td>5712.000</td>\n",
        "      <td>1.15</td>\n",
-       "      <td>7482.36000</td>\n",
+       "      <td>6568.8000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -372,22 +372,22 @@
       ],
       "text/plain": [
        "         Produtos  Preço Original  Moeda  Cotação  Preço de Compra  Margem  \\\n",
-       "0    Câmera Canon          999.99  Dólar     5.55        5549.9445    1.40   \n",
-       "1   Carro Renault         4500.00   Euro     6.34       28530.0000    2.00   \n",
-       "2   Notebook Dell          899.99  Dólar     5.55        4994.9445    1.70   \n",
-       "3          IPhone          799.00  Dólar     5.55        4434.4500    1.70   \n",
-       "4      Carro Fiat         3000.00   Euro     6.34       19020.0000    1.90   \n",
-       "5  Celular Xiaomi          480.48  Dólar     5.55        2666.6640    2.00   \n",
-       "6        Joia 20g           20.00   Ouro   325.32        6506.4000    1.15   \n",
+       "0    Câmera Canon          999.99  Dólar     4.60         4599.954    1.40   \n",
+       "1   Carro Renault         4500.00   Euro     5.04        22680.000    2.00   \n",
+       "2   Notebook Dell          899.99  Dólar     4.60         4139.954    1.70   \n",
+       "3          IPhone          799.00  Dólar     4.60         3675.400    1.70   \n",
+       "4      Carro Fiat         3000.00   Euro     5.04        15120.000    1.90   \n",
+       "5  Celular Xiaomi          480.48  Dólar     4.60         2210.208    2.00   \n",
+       "6        Joia 20g           20.00   Ouro   285.60         5712.000    1.15   \n",
        "\n",
        "   Preço de Venda  \n",
-       "0      7769.92230  \n",
-       "1     57060.00000  \n",
-       "2      8491.40565  \n",
-       "3      7538.56500  \n",
-       "4     36138.00000  \n",
-       "5      5333.32800  \n",
-       "6      7482.36000  "
+       "0       6439.9356  \n",
+       "1      45360.0000  \n",
+       "2       7037.9218  \n",
+       "3       6248.1800  \n",
+       "4      28728.0000  \n",
+       "5       4420.4160  \n",
+       "6       6568.8000  "
       ]
      },
      "metadata": {},
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
