--- a/aula1/Aula 1 - Gabarito.ipynb
+++ b/aula1/Aula 1 - Gabarito.ipynb
@@ -372,7 +372,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -387,6 +387,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "dcf710e0e305e0bab058daae6edf460a0a707f02d9d122c89bc9ac9b97f2ee09"
+   }
   }
  },
  "nbformat": 4,
